아이콘 업데이트고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0101_M01.html
+++ b/src/html/customer/SCR_GA_CS_0101_M01.html
@@ -18,19 +18,19 @@
                             도움을 드리겠습니다.
                         </h3>
                         <div class="search-wrap">
-							<!-- 20220831 -->
-							<div class="ip-group">
-								<div class="row">
-									<div class="module-ico">
-										<i class="ico search lg"></i>
-									</div>
-									<div class="module-ip">
-										<input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력">
-										<div class="line"></div>
-									</div>
-								</div>
-							</div>
-							<!-- //20220831 -->
+                            <!-- 20220831 -->
+                            <div class="ip-group">
+                                <div class="row">
+                                    <div class="module-ico">
+                                        <i class="ico search lg"></i>
+                                    </div>
+                                    <div class="module-ip">
+                                        <input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력" />
+                                        <div class="line"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- //20220831 -->
                         </div>
                         <div class="btn-tab">
                             <div class="scroll-area">
@@ -87,12 +87,16 @@
                         </section>
                         <hr class="divider" />
                         <section class="section">
-                            <div class="section-title">
-                                <h3>자주하는 질문</h3>
-                                <button class="btn icon right btn-more-view">
-                                    <span class="text">더보기</span>
-                                    <i class="ico arrow-right-nav030 md"></i>
-                                </button>
+                            <div class="section-title mb16">
+                                <div class="left">
+                                    <h3 class="mb0">자주하는 질문</h3>
+                                </div>
+                                <div class="right">
+                                    <button class="btn icon right btn-more-view">
+                                        <span class="text">더보기</span>
+                                        <i class="ico arrow-right-nav030 md"></i>
+                                    </button>
+                                </div>
                             </div>
                             <div class="section-body">
                                 <div class="qna-list type-1">
@@ -186,19 +190,19 @@
                             <div class="quick-menu">
                                 <div class="item">
                                     <div class="img">
-                                        <img src="/images/contents/gc_cs_qiuck_01.svg" alt="">
+                                        <img src="/images/contents/gc_cs_qiuck_01.svg" alt="" />
                                     </div>
                                     <div class="text">가입조회</div>
                                 </div>
                                 <div class="item">
                                     <div class="img">
-                                        <img src="/images/contents/gc_cs_qiuck_02.svg" alt="">
+                                        <img src="/images/contents/gc_cs_qiuck_02.svg" alt="" />
                                     </div>
                                     <div class="text">그린카비즈</div>
                                 </div>
                                 <div class="item">
                                     <div class="img">
-                                        <img src="/images/contents/gc_cs_qiuck_03.svg" alt="">
+                                        <img src="/images/contents/gc_cs_qiuck_03.svg" alt="" />
                                     </div>
                                     <div class="text">
                                         온라인<br />
@@ -215,8 +219,7 @@
                             </dl>
                             <button type="button" class="btn line full lg">모바일 문의</button>
                         </section>
-                        <button class="float-btn">
-                        </button>
+                        <button class="float-btn"></button>
                     </div>
                 </div>
             </section>
