--- a/src/html/customer/SCR_GA_CS_0301_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0301_M01_01.html
@@ -110,7 +110,13 @@
                         <div class="btn-group mt16">
                             <button type="button" class="btn line lg btn-more"><span class="text">검색결과 더보기</span><i class="ico more lg"></i></button>
                         </div>
-                        <p class="mt40">원하시는 답변을 찾지 못하셨나요? 채팅 또는 전화상담을 통해 원하시는 답변을 찾아보세요.</p>
+                        <div class="chat-area mt40 mb40">
+                            <p>원하시는 답변을 찾지 못하셨나요? 채팅 또는 전화상담을 통해 원하시는 답변을 찾아보세요.</p>
+                            <button class="btn round line xs">
+                                <span class="text">채팅상담</span>
+                                <i class="ico arrow-next lg"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </section>
