--- a/src/html/customer/SCR_GA_CS_0301_M01_02.html
+++ b/src/html/customer/SCR_GA_CS_0301_M01_02.html
@@ -18,19 +18,19 @@
                             도움을 드리겠습니다.
                         </h3>
                         <div class="search-wrap">
-                           <!-- 20220831 -->
-						   <div class="ip-group">
-								<div class="row">
-									<div class="module-ico">
-										<i class="ico search lg"></i>
-									</div>
-									<div class="module-ip">
-										<input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력">
-										<div class="line"></div>
-									</div>
-								</div>
-							</div>
-							<!-- //20220831 -->
+                            <!-- 20220831 -->
+                            <div class="ip-group">
+                                <div class="row">
+                                    <div class="module-ico">
+                                        <i class="ico search lg"></i>
+                                    </div>
+                                    <div class="module-ip">
+                                        <input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력" />
+                                        <div class="line"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- //20220831 -->
                         </div>
                         <!-- <div class="btn-tab">
                             <div class="scroll-area">
@@ -47,16 +47,21 @@
                                 <p><span class="text-green">‘차량구매’</span> 관련 <span class="text-green">0</span>건의 FAQ가 검색되었습니다.</p>
                             </div>
                             <div class="qna-list-body">
-                               <div class="no-data">
-                                <p>검색 결과가 없습니다. 
-                                    검색어를 다시 한 번 확인해주세요.</p>
-                               </div>
+                                <div class="no-data text-type">
+                                    <p>
+                                        검색 결과가 없습니다. <br />
+                                        검색어를 다시 한 번 확인해주세요.
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="btn-group mt16">
-                            <button type="button" class="btn line lg btn-more"><span class="text">검색결과 더보기</span><i class="ico more lg"></i></button>
+                        <div class="chat-area">
+                            <p>원하시는 답변을 찾지 못하셨나요? 채팅 또는 전화상담을 통해 원하시는 답변을 찾아보세요.</p>
+                            <button class="btn round line xs">
+                                <span class="text">채팅상담</span>
+                                <i class="ico arrow-next lg"></i>
+                            </button>
                         </div>
-                        <p class="mt40">원하시는 답변을 찾지 못하셨나요? 채팅 또는 전화상담을 통해 원하시는 답변을 찾아보세요.</p>
                     </div>
                 </div>
             </section>
