--- a/src/html/customer/SCR_GA_CS_0701_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_01.html
@@ -1,100 +1,58 @@
 <div class="layer-wrap">
     <div class="layer-header">
-		<h5 class="title-md">문의유형 선택</h5>
-		<button type="button" class="layer-close">
-			<i class="ico close lg"></i>
-			<span class="hide-txt">닫기</span>
-		</button>
-	</div>
+        <h5 class="title-md">문의유형 선택</h5>
+        <button type="button" class="layer-close">
+            <i class="ico close lg"></i>
+            <span class="hide-txt">닫기</span>
+        </button>
+    </div>
 
     <div class="layer-body">
-        <div class="radio-select-list">
-        <ul>
-            <li>
-                <label for="tmpRadio01" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="" />
+        <div class="select-list">
+            <ul>
+                <li>
                     <span>예약/결제문의</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio02" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio02" />
+                </li>
+                <li>
                     <span>흡연신고</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio03" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio03" />
+                </li>
+                <li>
                     <span>흡연신고</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio04" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio04" />
+                </li>
+                <li>
                     <span>서비스버그 신고</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio05" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio05" />
+                </li>
+                <li class="active">
                     <span>회원가입문의</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio06" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio06" />
+                </li>
+                <li>
                     <span>포인트/쿠폰</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio07" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio07" />
+                </li>
+                <li>
                     <span>이벤트</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio08" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio08" />
+                </li>
+                <li>
                     <span>그린존 이용</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio09" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio09" />
+                </li>
+                <li>
                     <span>차량고장접수</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio10" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio10" />
+                </li>
+                <li>
                     <span>환불접수</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio11" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio11" />
+                </li>
+                <li>
                     <span>차량사진접수</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio12" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio12" />
+                </li>
+                <li>
                     <span>불편접수/건의</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio13" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio13" />
+                </li>
+                <li>
                     <span>개인정보권리행사</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio14" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio14" />
+                </li>
+                <li>
                     <span>기타</span>
-                </label>
-            </li>
-        </ul>
-    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
