--- a/src/status.html
+++ b/src/status.html
@@ -1757,7 +1757,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0101_M01.html">SCR_GA_CS_0101_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1773,7 +1773,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T01.html">SCR_GA_CS_0201_T01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1787,7 +1787,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T02.html">SCR_GA_CS_0201_T02.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1801,7 +1801,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T03.html">SCR_GA_CS_0201_T03.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1815,7 +1815,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T04.html">SCR_GA_CS_0201_T04.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1829,7 +1829,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01.html">SCR_GA_CS_0301_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1845,7 +1845,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01_01.html">SCR_GA_CS_0301_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1861,7 +1861,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01_02.html">SCR_GA_CS_0301_M01_02.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1877,7 +1877,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0302_M01.html">SCR_GA_CS_0302_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1891,7 +1891,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0303_M01.html">SCR_GA_CS_0303_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1905,7 +1905,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01.html">SCR_GA_CS_0401_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1921,7 +1921,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01_01.html">SCR_GA_CS_0401_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1937,7 +1937,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0401_M01_02#bottom">SCR_GA_CS_0401_M01_02.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1965,7 +1965,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0502_M01.html">SCR_GA_CS_0502_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1995,7 +1995,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_02#full">SCR_GA_CS_0601_M01_02.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2051,7 +2051,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_06#bottom">SCR_GA_CS_0601_M01_06.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2079,7 +2079,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_08">SCR_GA_CS_0601_M01_08.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2093,7 +2093,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01.html">SCR_GA_CS_0701_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2121,7 +2121,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_02#bottom">SCR_GA_CS_0701_M01_02.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2191,7 +2191,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_07.html">SCR_GA_CS_0701_M01_07.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2219,7 +2219,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_09#bottom">SCR_GA_CS_0701_M01_09.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2247,7 +2247,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_11#bottom">SCR_GA_CS_0701_M01_11.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2261,7 +2261,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0702_M01.html">SCR_GA_CS_0702_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2275,7 +2275,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0702_M01_01.html">SCR_GA_CS_0702_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2289,7 +2289,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0703_M01.html">SCR_GA_CS_0703_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
