--- a/src/html/customer/SCR_GA_CS_0601_M01_03.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_03.html
@@ -1,64 +1,40 @@
 <div class="layer-wrap">
     <div class="layer-header">
-		<h5 class="title-md">접수유형</h5>
-		<button type="button" class="layer-close">
-			<i class="ico close lg"></i>
-			<span class="hide-txt">닫기</span>
-		</button>
-	</div>
+        <h5 class="title-md">접수유형</h5>
+        <button type="button" class="layer-close">
+            <i class="ico close lg"></i>
+            <span class="hide-txt">닫기</span>
+        </button>
+    </div>
 
     <div class="layer-body">
-        <div class="radio-select-list">
-        <ul>
-            <li>
-                <label for="tmpRadio01" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="" />
+        <div class="select-list">
+            <ul>
+                <li>
                     <span>면허증 등 신분증</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio02" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio02" />
+                </li>
+                <li>
                     <span>운전경력증명서</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio03" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio03" />
+                </li>
+                <li>
                     <span>가족관계증명서 </span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio04" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio04" />
+                </li>
+                <li>
                     <span>개인정보제공동의서 </span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio05" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio05" />
+                </li>
+                <li>
                     <span>사업자등록증 </span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio06" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio06" />
+                </li>
+                <li>
                     <span>통신사 가입증명서</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio07" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio07" />
+                </li>
+                <li>
                     <span>대리인신분증</span>
-                </label>
-            </li>
-            <li>
-                <label for="tmpRadio08" class="gc-radio">
-                    <input type="radio" name="tmpRadio01" id="tmpRadio08" />
+                </li>
+                <li>
                     <span>기타(명의자사망확인서 등)</span>
-                </label>
-            </li>
-        </ul>
-    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
