--- a/src/html/customer/SCR_GA_CS_0701_M01_11.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_11.html
@@ -8,43 +8,25 @@
     </div>
 
     <div class="layer-body">
-        <div class="radio-select-list">
+        <div class="select-list">
             <ul>
-                <li>
-                    <label for="tmpRadio01" class="gc-radio">
-                        <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="" />
-                        <span>(열람)개인정보의 항목 및 내용 </span>
-                    </label>
+                <li class="active">
+                    <span>(열람)개인정보의 항목 및 내용 </span>
                 </li>
                 <li>
-                    <label for="tmpRadio02" class="gc-radio">
-                        <input type="radio" name="tmpRadio01" id="tmpRadio02" />
-                        <span>(열람)개인정보 수집·이용의 목적 </span>
-                    </label>
+                    <span>(열람)개인정보 수집·이용의 목적 </span>
                 </li>
                 <li>
-                    <label for="tmpRadio03" class="gc-radio">
-                        <input type="radio" name="tmpRadio01" id="tmpRadio03" />
-                        <span>(열람)개인정보 보유 및 이용기간 </span>
-                    </label>
+                    <span>(열람)개인정보 보유 및 이용기간 </span>
                 </li>
                 <li>
-                    <label for="tmpRadio04" class="gc-radio">
-                        <input type="radio" name="tmpRadio01" id="tmpRadio04" />
-                        <span>(열람)개인정보의 제3자 제공현황 </span>
-                    </label>
+                    <span>(열람)개인정보의 제3자 제공현황 </span>
                 </li>
                 <li>
-                    <label for="tmpRadio05" class="gc-radio">
-                        <input type="radio" name="tmpRadio01" id="tmpRadio05" />
-                        <span>(정정·삭제)정정·삭제하려는 개인정보의 항목과 그 사유 기록 </span>
-                    </label>
+                    <span>(정정·삭제)정정·삭제하려는 개인정보의 항목과 그 사유 기록 </span>
                 </li>
                 <li>
-                    <label for="tmpRadio06" class="gc-radio">
-                        <input type="radio" name="tmpRadio01" id="tmpRadio06" />
-                        <span>(처리정지)개인정보의 처리정지를 원하는 대상·내용 및 그 사유 기록 </span>
-                    </label>
+                    <span>(처리정지)개인정보의 처리정지를 원하는 대상·내용 및 그 사유 기록 </span>
                 </li>
             </ul>
         </div>
