--- a/src/html/customer/SCR_GA_CS_0702_M01.html
+++ b/src/html/customer/SCR_GA_CS_0702_M01.html
@@ -15,10 +15,24 @@
                     <div class="customer">
                         <div class="gc-tab">
                             <ul>
-                                <li><a href="#" class="active">문의하기</a></li>
-                                <li><a href="#">문의내역</a></li>
+                                <li><a href="#">문의하기</a></li>
+                                <li><a href="#" class="active">문의내역</a></li>
                             </ul>
                             <span class="tab-indicator"></span>
+                        </div>
+                        <div class="filter-box">
+                            <div class="left">
+                                <button class="btn icon">
+                                    <span class="text">최근 6개월</span>
+                                    <i class="ico arrow-down lg"></i>
+                                </button>
+                            </div>
+                            <div class="right">
+                                <button class="btn icon">
+                                    <i class="ico arrow-up-down lg"></i>
+                                    <span class="text">등록일자순</span>
+                                </button>
+                            </div>
                         </div>
                         <hr class="divider" />
                         <section>
@@ -50,8 +64,7 @@
                                     <li class="item">
                                         <div class="date">2022.06.15 13:52</div>
                                         <div class="title">
-                                            <div class="left"><strong>예약/결제문의</strong><span class="badge solid red sm">NEW</span>
-                                            </div>
+                                            <div class="left"><strong>예약/결제문의</strong><span class="badge solid red sm">NEW</span></div>
                                             <div class="right"><span class="badge line green lg">답변완료</span></div>
                                         </div>
                                         <div class="content">
