고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0501_M01.html
+++ b/src/html/customer/SCR_GA_CS_0501_M01.html
@@ -90,7 +90,7 @@
                         <hr class="divider" />
                         <section>
                             <h4>법인/단체 카셰어링 가입 절차</h4>
-                            <p>그린카 법인/단체 카셰어링은?<br><span class="text-green"> 법인/단체 관리자 가입 후, 차량 이용을 위한 소속원 가입 필수</span></p>
+                            <p>그린카 법인/단체 카셰어링은?<br /><span class="text-green"> 법인/단체 관리자 가입 후, 차량 이용을 위한 소속원 가입 필수</span></p>
                             <div class="join-step">
                                 <ol>
                                     <li class="item">
@@ -117,11 +117,18 @@
                         </section>
                         <hr class="divider" />
                         <section>
-                            <h4>그린카 법인/단체 카셰어링<br> 지금 신청해 보세요!</h4>
+                            <h4>
+                                그린카 법인/단체 카셰어링<br />
+                                지금 신청해 보세요!
+                            </h4>
                             <p>법인/단체 고객만의 특별한 혜택 이용내역 확인, 소속원 관리까지 간편하게 이용가능</p>
                         </section>
-                        <div class="btn-group">
-                            <button type="button" class="btn line lg">법인/단체 관리자 가입신청</button>
+                        <div class="btn-group"></div>
+                        <div class="btn-area center mb40">
+                            <button type="button" class="btn round line xs">
+                                <span class="text">법인/단체 관리자 가입신청</span>
+                                <i class="ico arrow-next lg"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
