--- a/src/status.html
+++ b/src/status.html
@@ -1951,7 +1951,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0501_M01.html">SCR_GA_CS_0501_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1981,7 +1981,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0601_M01.html">SCR_GA_CS_0601_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
