고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0601_M01_02.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_02.html
@@ -5,10 +5,10 @@
     </div>
 
     <div class="layer-body">
-        <div class="">
-            <p>회사는 이용자의 동의가 있거나 법령의 의한 경우를 제외하고는 본 조에서 고지한 범위를 넘어 이용자의 개인정보를 이용하지 않으며, 수집한 개인정보의 수집 및 이용 목적은 아래와 같습니다.</p>
-            <p class="">※ 주민등록번호를 포함하는 서류 첨부 시, 주민등록번호 뒤 6자리는 마스킹 처리가 될 수 있습니다.</p>
-            <div class="tb-wrap type-2  mt24">
+        <div class="agree-terms">
+            <strong>회사는 이용자의 동의가 있거나 법령의 의한 경우를 제외하고는 본 조에서 고지한 범위를 넘어 이용자의 개인정보를 이용하지 않으며, 수집한 개인정보의 수집 및 이용 목적은 아래와 같습니다.</strong>
+            <p class="desc-gray mt24">※ 주민등록번호를 포함하는 서류 첨부 시, 주민등록번호 뒤 6자리는 마스킹 처리가 될 수 있습니다.</p>
+            <div class="tb-wrap type-2 mt24">
                 <table>
                     <colgroup>
                     <col width="144px">
@@ -56,7 +56,7 @@
                     </tbody>
                 </table>
             </div>
-            <p class="mt8">※ 보유 및 이용기간 : 업무 목적 달성 후 즉시 폐기 (수집항목 공통)</p>
+            <p class="desc-gray mt8">※ 보유 및 이용기간 : 업무 목적 달성 후 즉시 폐기 (수집항목 공통)</p>
         </div>
     </div>
 </div>
