--- a/src/status.html
+++ b/src/status.html
@@ -2009,7 +2009,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_03#bottom">SCR_GA_CS_0601_M01_03.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2107,7 +2107,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_01#bottom">SCR_GA_CS_0701_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
