--- a/src/status.html
+++ b/src/status.html
@@ -2283,6 +2283,34 @@
                         <tr>
                             <td></td>
                             <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>기간선택</td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0702_M01_02#bottom">SCR_GA_CS_0702_M01_02.html</a></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>정렬선택</td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0702_M01_03#bottom">SCR_GA_CS_0702_M01_03.html</a></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
                             <td>문의내역 상세</td>
                             <td></td>
                             <td></td>
