고객센터 -- 작업 중

--- a/src/status.html
+++ b/src/status.html
@@ -2037,7 +2037,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0601_M01_05.html">SCR_GA_CS_0601_M01_05.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2122,20 +2122,6 @@
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_02#bottom">SCR_GA_CS_0701_M01_02.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
-                            <td class="date"></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>예약정보 선택</td>
-                            <td></td>
-                            <td>박지수</td>
-                            <td>/customer</td>
-                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_03#bottom">SCR_GA_CS_0701_M01_03.html</a></td>
-                            <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2232,8 +2218,8 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_10#bottom">SCR_GA_CS_0701_M01_10.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_10.html">SCR_GA_CS_0701_M01_10.html</a></td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
